Changes in 4.2:
- Add new group switcher combobox in toolbar (290888)

Changes in 4.2rc1:
- Make it possible to check individual files of a torrent
- Data checks for multiple torrents can now get started at the same time (265611)
- Make links clickable in the status tab comments field (266089)
- Revamp UPnP plugin (266397)
- Fix bug making it possible to add conflicting items to the schedule (268879)
- Make it possible for schedule items to span multiple days (225939)
- Include disk usage of existing files when calculating bytes left after download in FileSelectDlg (267220)
- Disable scripts in GUI, if no interpreter could be found for the script (270226)
- Show shutdown plugin's config dialog when no rules are present and the enable button is pressed (271311)
- Make it possible to wait for several events before activating the shutdown action
- Fix wrong required diskspace calculation in some rare circumstances (271097)
- Revamp scanfolder plugin (263813, 271657)
- Revamp GUI of mediaplayer plugin
- Make properties extender a dialog (274356)
- Fix bug causing scripts not to be selectable in scripting plugin
- Show info hash in status tab
- Improve video streaming support
- Add Open With option to FileView context menu (279386)
- Fix bug causing views to not get properly restored when the application language changes (279588)
- Check if new trackers have a supported protocol
- Remove usage of several deprecated KDE3 networking classes
- Remove obsolete config options of datacheck during upload feature
- Improve error display of syndication plugin errors (280814)
- Remove multiple views support (281675)
- Relabel Change Tracker button into Switch Tracker to avoid user confusion (282951)
- Revamp IP filter widget (281245)
- Fix scanfolder moving to loaded directory causing a flurry of popups about the torrent already being loaded (283508)
- Only enable the infowidget plugin by default (278283)
- Add force start option (213504)