@@ -595,3 +595,7 @@ Name[x-test]=xxEvent generated by pluginxx
 Name[zh_CN]=插件产生的事件
 Name[zh_TW]=外掛程式產生的事件
 Action=Sound|Popup
+
+[Event/MagnetLinkDownloadStarted]
+Name=Magnet link download started
+Action=Sound|Popup
