@@ -34,6 +34,7 @@
 #include <kio/job.h>
 #include <kio/accessmanager.h>
 #include <KFileDialog>
+#include <KMainWindow>
 #include <kio/copyjob.h>
 #include "buffernetworkreply.h"
 #include "localfilenetworkreply.h"
@@ -49,59 +50,71 @@ using namespace bt;
 
 namespace kt
 {
-	
+
 	class NetworkAccessManager : public KIO::AccessManager
 	{
 	public:
-		NetworkAccessManager(WebView* parent) : KIO::AccessManager(parent),webview(parent)
+		NetworkAccessManager(WebView* parent) : KIO::AccessManager(parent), webview(parent)
 		{
 		}
-		
+
 		virtual ~NetworkAccessManager()
 		{}
-		
+
 		virtual QNetworkReply* createRequest(Operation op, const QNetworkRequest& req, QIODevice* outgoingData)
 		{
-			if (req.url().host() == "ktorrent.searchplugin")
+			if (req.url().scheme() == "magnet")
+			{
+				webview->handleMagnetUrl(req.url());
+				return QNetworkAccessManager::createRequest(op, req, outgoingData);
+			}
+			else if (req.url().host() == "ktorrent.searchplugin")
 			{
 				QString search_text = req.url().queryItemValue("search_text");
+
 				if (!search_text.isEmpty())
 				{
 					QUrl url(webview->searchUrl(search_text));
 					QNetworkRequest request(url);
 					webview->setUrl(url);
-					return KIO::AccessManager::createRequest(op,request,outgoingData);
+					return KIO::AccessManager::createRequest(op, request, outgoingData);
 				}
 				else if (req.url().path() == "/")
 				{
-					return new BufferNetworkReply(webview->homePageData().toLocal8Bit(),"text/html",this);
+					return new BufferNetworkReply(webview->homePageData().toLocal8Bit(), "text/html", this);
 				}
 				else
 				{
-					return new LocalFileNetworkReply(webview->homePageBaseDir() + req.url().path(),this);
+					return new LocalFileNetworkReply(webview->homePageBaseDir() + req.url().path(), this);
 				}
 			}
-			
-			return KIO::AccessManager::createRequest(op,req,outgoingData);
+
+			return KIO::AccessManager::createRequest(op, req, outgoingData);
 		}
-		
+
 		WebView* webview;
 	};
-	
-	
+
+
 	//////////////////////////////////////////////////////
-	
+
 	WebView::WebView(kt::WebViewClient* client, QWidget* parentWidget)
-		: KWebView(parentWidget),client(client)
+			: KWebView(parentWidget), client(client)
 	{
 		page()->setNetworkAccessManager(new NetworkAccessManager(this));
 		page()->setForwardUnsupportedContent(true);
-		
-		connect(page(),SIGNAL(downloadRequested(QNetworkRequest)),this,SLOT(downloadRequested(QNetworkRequest)));
+
+		connect(page(), SIGNAL(downloadRequested(QNetworkRequest)), this, SLOT(downloadRequested(QNetworkRequest)));
 	}
-		
+
 	WebView::~WebView()
 	{
+	}
+	
+	void WebView::handleMagnetUrl(const QUrl& magnet_url)
+	{
+		if (client)
+			client->magnetUrl(magnet_url);
 	}
 
 	void WebView::openUrl(const KUrl& url)
@@ -111,37 +124,39 @@ namespace kt
 		else
 			load(url);
 	}
-	
+
 	void WebView::home()
 	{
 		if (home_page_html.isEmpty())
 			loadHomePage();
-		
+
 		load(QUrl("http://ktorrent.searchplugin/"));
 	}
-	
+
 	QString WebView::homePageData()
 	{
 		if (home_page_html.isEmpty())
 			loadHomePage();
-		
+
 		return home_page_html;
 	}
 
 
 	void WebView::loadHomePage()
 	{
-		QString file = KStandardDirs::locate("data","ktorrent/search/home/home.html");
+		QString file = KStandardDirs::locate("data", "ktorrent/search/home/home.html");
 		QFile fptr(file);
+
 		if (fptr.open(QIODevice::ReadOnly))
 		{
-			Out(SYS_SRC|LOG_DEBUG) << "Loading home page from " << file << endl;
+			Out(SYS_SRC | LOG_DEBUG) << "Loading home page from " << file << endl;
 			home_page_base_url = file.left(file.lastIndexOf('/') + 1);
 			home_page_html = QTextStream(&fptr).readAll();
-			
+
 			// %1
 			home_page_html = home_page_html.arg("ktorrent_infopage.css");
 			// %2
+
 			if (qApp->layoutDirection() == Qt::RightToLeft)
 			{
 				QString link = "<link rel=\"stylesheet\" type=\"text/css\" href=\"%1\" />";
@@ -150,21 +165,23 @@ namespace kt
 			}
 			else
 				home_page_html = home_page_html.arg("");
-			
+
 			KIconLoader *iconloader = KIconLoader::global();
+
 			int icon_size = iconloader->currentSize(KIconLoader::Desktop);
+
 			home_page_html = home_page_html
-				.arg(i18n("Home")) // %3 Title
-				.arg(i18n("KTorrent")) // %4
-				.arg(i18nc("KDE 4 tag line, see http://kde.org/img/kde40.png", "Be free.")) // %5
-				.arg(i18n("Search the web for torrents.")) // %6
-				.arg(i18n("Search")) // %7
-				.arg("search_text") // %8
-				.arg(icon_size).arg(icon_size); // %9 and %10
+			                 .arg(i18n("Home")) // %3 Title
+			                 .arg(i18n("KTorrent")) // %4
+			                 .arg(i18nc("KDE 4 tag line, see http://kde.org/img/kde40.png", "Be free.")) // %5
+			                 .arg(i18n("Search the web for torrents.")) // %6
+			                 .arg(i18n("Search")) // %7
+			                 .arg("search_text") // %8
+			                 .arg(icon_size).arg(icon_size); // %9 and %10
 		}
 		else
 		{
-			Out(SYS_SRC|LOG_IMPORTANT) << "Failed to load " << file << " : " << fptr.errorString() << endl;
+			Out(SYS_SRC | LOG_IMPORTANT) << "Failed to load " << file << " : " << fptr.errorString() << endl;
 		}
 	}
 
@@ -175,19 +192,20 @@ namespace kt
 		else
 			return KUrl("http://google.be");
 	}
-	
+
 	QWebView* WebView::createWindow(QWebPage::WebWindowType type)
 	{
 		Q_UNUSED(type);
 		return client->newTab();
 	}
-	
+
 	void WebView::downloadRequested(const QNetworkRequest& req)
 	{
 		QString filename = QFileInfo(req.url().path()).fileName();
-		QString path = KFileDialog::getExistingDirectory(KUrl("kfiledialog:///webview"),this,i18n("Save %1 to",filename));
+		QString path = KFileDialog::getExistingDirectory(KUrl("kfiledialog:///webview"), this, i18n("Save %1 to", filename));
+
 		if (!path.isEmpty())
-			KIO::copy(req.url(),KUrl(path));
+			KIO::copy(req.url(), KUrl(path));
 	}
 
 	void WebView::downloadResponse(QNetworkReply* reply)
@@ -196,19 +214,22 @@ namespace kt
 		KWebPage* p = (KWebPage*)page();
 		p->downloadResponse(reply);
 #else
-		QString fn = KFileDialog::getSaveFileName(KUrl("kfiledialog:///openTorrent"),kt::TorrentFileFilter(false),this);
+		QString fn = KFileDialog::getSaveFileName(KUrl("kfiledialog:///openTorrent"), kt::TorrentFileFilter(false), this);
+
 		if (!fn.isNull())
 		{
 			QFile fptr(fn);
+
 			if (!fptr.open(QIODevice::WriteOnly))
 			{
-				KMessageBox::error(this,i18n("Cannot open <b>%1</b>: %2",fn,fptr.errorString()));
+				KMessageBox::error(this, i18n("Cannot open <b>%1</b>: %2", fn, fptr.errorString()));
 			}
 			else
 			{
 				fptr.write(reply->readAll());
 			}
 		}
+
 #endif
 	}
 
