@@ -1,5 +1,8 @@
 Changes in 4.2:
 - Add new group switcher combobox in toolbar (290888)
+- Make kio-magnet optional
+- Improve handing magnet uris in search plugin
+- Fix bug causing kio-magnet to deselect all files
 
 Changes in 4.2rc1:
 - Make it possible to check individual files of a torrent
